syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/invitations";
import "accounts/v1alpha1/accounts.proto";

package accounts.v1alpha1.invitations.v1;

// Invitation
enum InvitationResponse {
    INVITATION_RESPONSE_ACCEPTED_UNSPECIFIED = 0;
    INVITATION_RESPONSE_REJECTED = 1;
}


message SendInvitationUserRequest {
    string name = 1;
    string email = 2;
    //repeated ProjectDetail projects = 3;
    string user_id_admin = 4;
    repeated uint32 roles_ids = 5; //roles projects
    repeated uint32 permissions_ids = 6;
    uint32 organization_id = 7;
}

message SendInvitationUserResponse {
    Organization organization=1;
    repeated Project projects=2;
    string invitation_code=3;
    string result=4;
    repeated Role roles = 5;
    repeated Permission permissions = 6;
    string error = 7;
}

message GetInvitationUserRequest {
    string invitation_code=1;
    string email=2;
}

message OrganizationInvitation {
    uint32 id = 1;
    string name = 2;
    string image = 3;
    string description = 4;
    repeated Project projects = 5;
}

message GetInvitationUserResponse {
    uint32 id = 1;
    string invitation_code = 2;
    repeated Role roles = 4;
    repeated Permission permissions = 5;
    OrganizationInvitation organization = 6;
    string email = 7;
    bool success = 8;   
    string error = 9;
}

message AgreeInvitationUserRequest {
    string invitation_code= 1 ;
    string email=2;
    string guest_user_id=3;
    InvitationResponse invitation_response=4;
    map<uint32, uint32> projects=5;
}

message AgreeInvitationUserResponse {
    string result=1;
}



/*
    LIST INVITATION USER
*/
message ListInvitationSendRequest {
    string owner_id = 1;
    uint32 project_id = 2;
    uint32 organization_id = 3;
    string email = 4;
}

message ListInvitationSendResponse {
    repeated GetInvitationUserResponse invitation_user = 1;
}

/*
    DELETE INVITATIONS
*/

message DeleteInvitationRequest {
    uint32 invitation_id = 1; 
    uint32 organization_id = 2;
    string user_id = 3;
}

message DeleteInvitationResponse {
    string msg = 1;
    string error = 2;
}