syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/users";
import "accounts/v1alpha1/accounts.proto";
package accounts.v1alpha1.users.v1;


/*

USERS

*/


message CreateUserResponse {
    string msg = 1;
    string error = 2;
}

message UpdateUserResponse {
    string msg = 1;
    string error = 2;
}

message DeleteUserResponse {
    string msg = 1;
    string error = 2;
}

//ListUser
message ListUserRequest {
    uint32 organization_id = 1;
    uint32 project_id = 2;
}

//Create
message CreateUserRequest {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    bool is_active = 5;
    repeated uint32 roles_ids = 6;
    repeated uint32 permissions_ids = 7;
    repeated uint32 organizations_ids = 8;
    // details
    string phone_number = 9;
    string country = 10;
    string city = 11;
    string zip_code = 12;
    string address = 13;
    string state = 14;
    string emoji_country = 15;
    string invitation_code  = 16;

    bool is_mfa_enabled = 17;

    //preferences
    string language = 18;
    bool push_notification  = 19;
    bool email_notification = 20;
    bool new_login_notification = 21;
    bool create_notification = 22;
    bool update_notification = 23;
    bool delete_notification = 24;
    bool application_notification = 25;
    bool read_notification = 26;


    string phone_code = 27;
}

//Update
message UpdateUserRequest {
    uint32 auth_id = 1;
    CreateUserRequest auth = 2;
}

//Update
message DeleteUserRequest {
    uint32 user_id = 1;
    uint32 organization_id = 2;
}

//Authentication without group and permission
message UserList {
    uint32 id = 1;

    string first_name = 2;
    string last_name = 3;
    string email = 4;

    string user_id = 5;
    bool is_active = 6;
    bool is_super_user = 7;
}


//GetOneUserRequest
message GetOneUserRequest {
    uint32 id = 1;
    uint32 organization_id = 2;
}

message GetOneUserResponse {
    uint32 id = 1;
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    bool is_active = 6;
    string created_at = 7;
    string updated_at = 8;
    repeated Role roles = 9;
    repeated Permission permissions = 10;
    bool is_super_user = 11;
    repeated Organization organizations = 12;
    repeated Project projects = 13;
    // details
    string phone_number = 14;
    string country = 15;
    string city = 16;
    string zip_code = 17;
    string address = 18;
    string state = 19;
    string emoji_country = 20;
    bool email_verified = 21;

    // preferences
    bool is_mfa_enabled = 22;
    string language = 23;
    bool push_notification  = 24;
    bool email_notification = 25;
    bool new_login_notification = 26;
    bool create_notification = 27;
    bool update_notification = 28;
    bool delete_notification = 29;
    bool application_notification = 30;
    bool read_notification = 31;

    string phone_code = 32;
}


//ListResponse
message ListUserResponse {
    repeated UserList users = 1;
}



/*
    INVITATIONS
*/


//pagination
message ListUserPaginationRequest{
    int32 offset = 1;
    int32 limit = 2;
} 

message ListUserPaginationResponse {
    int64 count = 1;
    repeated UserList users = 2;
}


/*
    DEX
*/

message GetListUserDexRequest {}

message GetListUserDexResponse {
    repeated UsersDex users_dex = 1;
}


message GetOneUserDexRequest {
    string user_id=1;
    CreateUserRequest user = 2;

}

message GetOneUserDexResponse {
    uint32 id = 1;
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    bool is_active = 6;
    string created_at = 7;
    string updated_at = 8;
    repeated Role roles = 9;
    repeated Permission permissions = 10;
    bool is_super_user = 11;
    repeated Organization organizations = 12;
    string msg = 13;
    repeated Project projects = 14;


    // details
    string phone_number = 15;
    string country = 16;
    string city = 17;
    string zip_code = 18;
    string address = 19;
    string state = 20;
    string emoji_country = 21;
    //multi-factor
    bool is_mfa_enabled = 22;
    string token_ccp = 23;
    bool email_verified = 24;
    string error = 25;


    //preferences
    string language = 26;
    bool push_notification  = 27;
    bool email_notification = 28;
    bool new_login_notification = 29;
    bool create_notification = 30;
    bool update_notification = 31;
    bool delete_notification = 32;
    bool application_notification = 33;
    bool read_notification = 34;


    string phone_code = 35;
}



/*
    VERIFICATION EMAIL
*/
message SendVerificationEmailRequest {
    string email = 1;
    string name = 2;
    string url = 3;
}

message SendVerificationEmailResponse {
    string html_result=1;
    string error = 2;
}

message VerifyEmailRequest {
    string token = 1;
}

message VerifyEmailResponse {
    string msg = 1;
    string error = 2;
}


message CheckUserRequest {
    uint32 organization_id = 1;
    uint32 project_id = 2;
    uint32 get_organization_from_project = 3;
    string permission = 4;
    // users
    string user_id_dex = 5;
    string user_id_admin = 6;
    uint32 user_id = 7;
    string type_permission = 9;
    repeated uint32 roles_ids = 10;

    string api_key_value = 11;

    /*
        replace dex by ccp
    */
    string token_ccp_admin = 12;
    string token_ccp_user_id = 13;


}

message CheckUserResponse {
    bool is_exists = 1;
    string error = 2;
    bool is_admin = 3;
    string msg = 4;
}

message UsersDex {
    string user_id=1;
    string provider=2;
}


/*

    FILTER BY EMAIL
*/

message GetUsersEmailFilterRequest {
    string value = 1;
}
message GetUsersEmailFilterResponse {
    repeated UserList users = 1;
}

