syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/users";
import "accounts/v1alpha1/users/users.proto";

package accounts.v1alpha1.users.v1;


service UserService {
    ///AUTH
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc ListUser(ListUserRequest) returns (ListUserResponse);
    rpc GetOneUser(GetOneUserRequest) returns (GetOneUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUserPagination(ListUserPaginationRequest) returns (ListUserPaginationResponse);


    //CHECK USER
    rpc CheckUser(CheckUserRequest) returns (CheckUserResponse);
    rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse);
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);


    //FILTER
    rpc GetUsersEmailFilter(GetUsersEmailFilterRequest) returns (GetUsersEmailFilterResponse);


    //DEX
    rpc GetListUserDex(GetListUserDexRequest) returns (GetListUserDexResponse);
    rpc GetOneUserDex(GetOneUserDexRequest) returns (GetOneUserDexResponse);

}
